# Snowflake

src/drag_race_iarrc/launch/: drag_race.launch
src/drag_race_iarrc/src/: DragRaceNode.cpp
src/drivers/launch/: firmware_serial_driver.launch
src/drivers/src/: EncoderOdometryNoCovarianceTestingNode.cpp
src/firmware/olaf_control/: olaf_control.ino
src/lane_follow_iarrc/include/: LaneFollow.h  LineDetect.h
src/lane_follow_iarrc/launch/: circuit_race_camera.launch  circuit_race_lane_follow.launch  circuit_race_stoplight_detection.launch
src/lane_follow_iarrc/src/: LaneFollow.cpp  LineDetect.cpp
src/lane_follow_iarrc/test/: line-detect-test.cpp
src/rf_comm_urc/: CMakeLists.txt  package.xml
src/rf_comm_urc/include/: RfCommServerNode.h
src/rf_comm_urc/src/: RfCommServerNode.cpp  rf_comm_server_node.cpp
src/sb_vision/include/: CircleDetection.h  HSVFilterNode.h  IPMFilterNode.h  ImageMergerNode.h
src/sb_vision/src/: CircleDetection.cpp  HSVFilterNode.cpp  IPMFilterNode.cpp  ImageMergerNode.cpp  camera_init.cpp
